# podcast-tagger

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  bbc_debug.html  main.py  pyproject.toml  requirements.txt
docs/: design.md
notebooks/: exploration.ipynb
scripts/: run_tests.ps1  setup_env.ps1  start_notebook.ps1
src/podcast_tagger/: bbc_client.py  bbc_scraper.py  bbc_urls.json  config.py  core.py  listennotes_client.py  tagger.py  tvdb_client.py  utils.py
tests/: test_core.py
