[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast_tagger"
version = "0.1.0"
description = "A Python project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lance Charles Carr" }
]

dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/lankymon/podcast-tagger"